test/e2e/chainsaw/hybridgateway/httproute-listener-hostname-match/02-httproutes-attached-to-gateway-with-wildcard-hostname-listener.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: ($http_route_namespace)
  name: ($http_route_name_wildcard_hostname)
spec:
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name_wildcard_listener_hostname)
    hostnames: 
    - "*.httpbin.test"
    rules:
    - matches:
        - path:
            type: PathPrefix
            value: ($route_path_wildcard_hostname)
      backendRefs:
        - name: ($httpbin_service_name)
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: ($http_route_namespace)
  name: ($http_route_name_exact_hostname)
spec:
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name_wildcard_listener_hostname)
    hostnames: 
    - "exact.httpbin.test"
    rules:
    - matches:
        - path:
            type: PathPrefix
            value: ($route_path_exact_hostname)
      backendRefs:
        - name: ($httpbin_service_name)
          port: 80
