test/e2e/chainsaw/hybridgateway/httproute-listener-hostname-match/03-httproute-attached-to-gateway-with-exact-listener-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: ($http_route_namespace)
  name: ($http_route_name)
spec:
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name_exact_listener_hostname)
    hostnames: 
    - "exact.httpbin-2.test"
    rules:
    - matches:
        - path:
            type: PathPrefix
            value: ($route_path)
      backendRefs:
        - name: ($httpbin_service_name)
          port: 80
