test/e2e/chainsaw/hybridgateway/httproute-listener-hostname-match/04-httproutes-partial-hostname-match-wildcard.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: ($http_route_namespace)
  name: ($http_route_name_wildcard_hostname)
spec:
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name_wildcard_listener_hostname)
    hostnames: 
    - "*.foo.httpbin.test"
    - "*.foo.httpbin.example"
    rules:
    - matches:
        - path:
            type: PathPrefix
            value: ($route_path_wildcard_hostname)
      backendRefs:
        - name: ($httpbin_service_name)
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: ($http_route_namespace)
  name: ($http_route_name_exact_hostname)
spec:
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name_wildcard_listener_hostname)
    hostnames: 
    - "exact.httpbin.test"
    - "exact.httpbin.example"
    rules:
    - matches:
        - path:
            type: PathPrefix
            value: ($route_path_exact_hostname)
      backendRefs:
        - name: ($httpbin_service_name)
          port: 80
