test/e2e/chainsaw/hybridgateway/httproute-listener-hostname-match/07-httproute-wildcard-hostname.yaml
---
# HTTPRoute with wildcard hostname attached to gateway with wildcard listener hostname
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: ($http_route_namespace)
  name: ($httproute_name)
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ($gateway_name)
  hostnames:
  - "*.http.httpbin.test"
  - "*.https.httpbin.test"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: ($route_path)
        method: GET
    backendRefs:
      - name: ($httpbin_service_name)
        port: ($httpbin_service_port)
