test/e2e/chainsaw/hybridgateway/httproute-listener-hostname-match/01-assert-prerequisites.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ($gateway_namespace)
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: ($gateway_class_name)
status:
  (conditions[?type == 'Accepted']):
    - status: 'True'
      reason: Accepted
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ($gateway_name_wildcard_listener_hostname)
  namespace: ($gateway_namespace)
status:
  (conditions[?type == 'Accepted']):
    - status: 'True'
      reason: Accepted
  (conditions[?type == 'Programmed']):
    - status: 'True'
      reason: Programmed
  (conditions[?type == 'DataPlaneReady']):
    - status: 'True'
      reason: Ready
  (conditions[?type == 'KonnectGatewayControlPlaneProgrammed']):
    - status: 'True'
      reason: Programmed
  (conditions[?type == 'KonnectExtensionReady']):
    - status: 'True'
      reason: Ready
  (conditions[?type == 'GatewayService']):
    - status: 'True'
      reason: Ready
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ($gateway_name_exact_listener_hostname)
  namespace: ($gateway_namespace)
status:
  (conditions[?type == 'Accepted']):
    - status: 'True'
      reason: Accepted
  (conditions[?type == 'Programmed']):
    - status: 'True'
      reason: Programmed
  (conditions[?type == 'DataPlaneReady']):
    - status: 'True'
      reason: Ready
  (conditions[?type == 'KonnectGatewayControlPlaneProgrammed']):
    - status: 'True'
      reason: Programmed
  (conditions[?type == 'KonnectExtensionReady']):
    - status: 'True'
      reason: Ready
  (conditions[?type == 'GatewayService']):
    - status: 'True'
      reason: Ready
