test/e2e/chainsaw/hybridgateway/httproute-listener-hostname-match/03-assert-httproute-attached-to-gateway-with-exact-listener-hostname.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ($http_route_name)
  namespace: ($http_route_namespace)
status:
  parents:
    - parentRef:
        name: ($gateway_name_exact_listener_hostname)
        group: gateway.networking.k8s.io
        kind: Gateway
      controllerName: konghq.com/gateway-operator
      (conditions[?type == 'Accepted']):
        - status: "True"
          reason: Accepted
      (conditions[?type == 'ResolvedRefs']):
        - status: "True"
          reason: ResolvedRefs
      (conditions[?type == 'KongRouteProgrammed']):
        - status: "True"
          reason: KongRouteProgrammed
      (conditions[?type == 'KongServiceProgrammed']):
        - status: "True"
          reason: KongServiceProgrammed
      (conditions[?type == 'KongUpstreamProgrammed']):
        - status: "True"
          reason: KongUpstreamProgrammed
      (conditions[?type == 'KongTargetProgrammed']):
        - status: "True"
          reason: KongTargetProgrammed
