test/e2e/chainsaw/hybridgateway/httproute-listener-hostname-match/06-assert-gateway-wildcard-listener.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ($gateway_name_wildcard_listener)
  namespace: ($namespace)
status:
  (conditions[?type == 'Accepted']):
    - status: 'True'
      reason: Accepted
  (conditions[?type == 'Programmed']):
    - status: 'True'
      reason: Programmed
  (conditions[?type == 'DataPlaneReady']):
    - status: 'True'
      reason: Ready
  (conditions[?type == 'KonnectGatewayControlPlaneProgrammed']):
    - status: 'True'
      reason: Programmed
  (conditions[?type == 'KonnectExtensionReady']):
    - status: 'True'
      reason: Ready
  (conditions[?type == 'GatewayService']):
    - status: 'True'
      reason: Ready
